tf_new/vpc.tf
# VPC 

resource "aws_vpc" "vpc" {
  cidr_block           = "172.16.0.0/16"
  instance_tenancy     = "default"
  enable_dns_support   = true
  enable_dns_hostnames = true
  enable_classiclink   = false
  tags = merge(
    var.tags,
    {
      Name = var.vpc_name
    },
  )
}
